# computational-math-toolkit

./: .flake8  .pre-commit-config.yaml  404.html  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
app/: streamlit_app.py
docs/: index.md
search/: search_index.json
site/: index.html  sitemap.xml
src/cmt/: __init__.py  analysis.py  la.py  ode.py  pde.py  utils.py
src/computational_math_toolkit.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_analysis.py  test_la.py  test_ode.py  test_pde.py
