[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-math-toolkit"
version = "0.1.0"
description = "A Python library of core numerical algorithms for applied mathematics."
authors = [
    { name = "JustFeo", email = "" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pytest",
    "mkdocs-material",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["src"]
